# soda-file

./: .gitignore  pyproject.toml
sodafile/: flf.py
sodafile/fdf/: base.py  reader_basic.py
sodafile/flf/: __init__.py  base.py  generic.py  model.py  reader.py  typing.py  utils.py  writer.py
tests/: conftest.py  strategies.py  test_flf.py  test_wrap.py
tests/flf/: test_model.py  test_reader.py  test_utils.py
