[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sodafile"
authors = [{ name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }]
description = "Read and write Soda Files"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["numpy>=1.19,<1.26"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools",
    "setuptools-scm",
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
    "hypothesis",
]
[tool.setuptools]
packages = ["sodafile"]

[tool.setuptools_scm]
parentdir_prefix_version = "sodafile-"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=sodafile --cov-report html"
testpaths = ["tests"]
